created the grid

--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
+        <!-- <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> -->
     </head>
     <body>
+        <h2>Etch a Sketch</h2>
+        <input type="color" id="colorPicker">
+        <input type="number" id="rows">
+        <input type="number" id="columns">
         <div id="container"></div>
         <script src="main.js"></script>
     </body>
