all functions ready

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <input type="color" id="colorPicker">
         <input type="number" id="rows">
         <input type="number" id="columns">
+        <button id="clear">Clear</button>
         <div id="container"></div>
         <script src="main.js"></script>
     </body>
